--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -30,6 +30,10 @@
   version = "0.21.0"
 
 [[constraint]]
+  name = "github.com/Luzifer/go_helpers"
+  version = "2.4.0"
+
+[[constraint]]
   name = "github.com/Luzifer/rconfig"
   version = "1.2.0"
 
